# mlops-deploy

./: LICENSE  pyproject.toml
.dvc/: config
model/: model.pkl  model.pkl.dvc
notebooks/: Modeling.ipynb
src/: prepare.py  requirements.txt
