[tool.poetry]
name = "mlops-deploy"
version = "0.1.0"
description = ""
authors = ["Eric Arellano <10988120+edam-software@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.2"
scikit-learn = "^1.2.2"
numpy = "^1.24.3"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
